forget,change Password

--- a/enroll/templates/login.html
+++ b/enroll/templates/login.html
@@ -16,7 +16,7 @@
         
 
 
-        {% for fm in form %} {{fm.label_tag}} {{fm}} {{fm.errors|striptags}}<br /><br />
+        {% for fm in form %} {{fm.label_tag}} {{fm}} {{fm.errors|striptags}}<br/>
 
         {% endfor %}
 
