--- a/enroll/templates/profile.html
+++ b/enroll/templates/profile.html
@@ -7,22 +7,53 @@
         <h3 class="text-center alert alert-danger">Profile Page</h3>
         <div class="col-sm-6 offset-3">
 
-            <h2>Profile page</h2>
             <h2 style="text-transform: capitalize;">Welcome {{name}}</h2>
-            <a href="{% url 'signup' %}" class="btn btn-success" >Signup</a>
-            <a href="{% url 'logout' %}" class="btn btn-danger" >logout</a>
-            <a href="{% url 'changepsw' %}" class="btn btn-danger" >Change Password</a>
-            <a href="{% url 'forgetpsw' %}" class="btn btn-danger" >Forget Password</a>
 
             {% if messages %} {% for mes in messages %}
 
-      <small {% if mes.tags %} class="{{mes.tags}} {% endif %}">{{mes}}</small>
+        <small {% if mes.tags %} class="{{mes.tags}} {% endif %}"><h5 style="color: green;">{{mes}}</h5></small>
       {% endfor %} {% endif %}
+
+            <form action="" method="post">
+                {% csrf_token %}
+
+                {% if form.non_field_errors %}
+
+                    {% for error in form.non_field_errors %}
+
+                        <p>{{error}}</p>
+
+                    {% endfor %}
+
+                {% endif %}
+
+
+                {% for fm in form %} 
+                
+                    {{fm.label_tag}} {{fm}} {{fm.errors|striptags}}<br>
+                
+                
+                {% endfor %}
+
+
+            <input type="submit" value="Update Details" class="btn btn-success">
+            <a href="{% url 'logout' %}" class="btn btn-danger" >logout</a>
+            <a href="{% url 'changepsw' %}" class="btn btn-warning" >Change Password</a>
+            <a href="{% url 'forgetpsw' %}" class="btn btn-info" >Forget Password</a>
+
+            </form>
+
+            
+            <!-- <a href="{% url 'signup' %}" class="btn btn-success" >Signup</a> -->
+            
+
+        
             
               
         </div>
     </div>
 </div>
+<br>
 
 
 
