--- a/enroll/templates/profile.html
+++ b/enroll/templates/profile.html
@@ -14,6 +14,44 @@
         <small {% if mes.tags %} class="{{mes.tags}} {% endif %}"><h5 style="color: green;">{{mes}}</h5></small>
       {% endfor %} {% endif %}
 
+            <div class="mt-3">
+                {% if users != None %}
+                    <h4 style="font-family:'Courier;">List of Users</h4>
+                        
+                        <table class="table border">
+                            <thead>
+                                <tr>
+                                    <th>Username</th>
+                                    <th>Email Address</th>
+                                    <th>First name</th>
+                                    <th>Last name</th>
+                                    <th>Staff status</th>
+                                </tr>
+                            </thead>
+                            {% for user in users %}
+                            <tbody>
+                                <tr>
+                                    <td scope="row"><a href="{% url 'userdetail' user.id %}">{{user.username}}</a></td>
+                                    <td>{{user.email}}</td>
+                                    <td>{{user.first_name}}</td>
+                                    <td>{{user.last_name}}</td>
+                                    <td>{{user.is_superuser}}</td>
+                                </tr>
+                            </tbody>
+                                {% endfor %}
+                            
+                        </table>
+                    
+
+                        
+
+                {% endif %}
+            </div>
+            <br>
+
+
+            
+
             <form action="" method="post">
                 {% csrf_token %}
 
